--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     </ul>
     <button class = "bt1">Se connecter</button>
   </nav>
-  
+  <section class="first">
+    <div>
+      <h1> Des Souvenirs De<br>
+        Voyage Que Vous<br>
+        N'oublierez <samp id="Jamais">Jamais</samp>.
+      </h1>
+      <p> Des escapades locales aux aventures lointaines,trouvez ce qui vous <br>
+        rend heureux.n'importe quand n'importe ou
+      </p>
+      <button class="bt2">Explorer plus</button>
+    </div>
+
+
+    <div>
+      <img src="./image/image1.png" alt="a bunch people waving" height="200">
+    </div>
+</section >
 
 </body>
 
