--- a/index.html
+++ b/index.html
@@ -39,6 +39,45 @@
       <img src="./image/image1.png" alt="a bunch people waving" height="200">
     </div>
 </section >
+<section class="second">
+  <h3>Pourquoi nous?</h3>
+  <main class="main">
+  <div>
+    <img src="./image/ticket.svg.png" height="25">
+    <h4>flexibilité ultime</h4>
+    <p>Vous avez le controle,avec gratuite<br>
+      d’annulation et de paiement pour<br>
+      satisfaire n’importe quel plan ou
+      budget
+    <p>
+  </div>
+  <div>
+    <img src="./image/hot-air-balloon.svg.png" height="25">
+    <h4>Expériences mémorables</h4>
+    <p>Parcourez et reservez des
+      visites et des<br> activites
+      tellement incroyable, tu voudras <br>
+      le dire a ton amis
+  </div>
+  <div>
+    <img src="./image/diamond.svg.png" height="25">
+    <h4>Qualité</h4>
+    <p>
+      Normes de haute qualite.
+      Des millions de
+      <br> commentaires
+    </p>
+  </div>
+  <div>
+    <img src="./image/medal.svg.png" height="25">
+    <h4>Award-winning support</h4>
+    <p>
+      Nouveau prix ? Nouveau plan?
+      Aucun <br> probleme.
+      Nous sommes la pour vous<br> aidez,24h/24 et 7j/7.</p>
+  </div>
+</main>
+</section>
 
 </body>
 
