--- a/index.html
+++ b/index.html
@@ -81,4 +81,14 @@
 
 </body>
 
+
+<footer>
+     
+  <h5>Contact</h5>
+ 
+  <p>N 433 Immeubles 3 Rue Zohour,Béni Mellal</p>
+  <p><a href="mailto:contact@viatours.com">contact@viatours.com</a></p>
+</footer>
+
+
 </html>
